--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,63 @@
     padding-inline: 2rem;
 }
 
+.container{
+  max-width: 1230px;
+}
+
+.faq-question{
+  font-size: 2.125rem;
+  font-weight: 500;
+  font-family: var(--font-anton);
+  cursor: pointer; 
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.garantia-section p{
+  font-family: var(--font-anton);
+  line-height: 4;
+}
+
+@media screen and (max-width: 768px) {
+  .faq-question{
+    font-size: 1.5rem;
+  }
+
+  .garantia-section p{
+  line-height: 2;
+}
+}
+
+.faq-answer p{
+  color: #707070 !important;
+}
+
+
+/* Create plus icon using before and after */
+  .faq-icon::before, .faq-icon::after {
+    content: '';
+    position: absolute;
+    background: black;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.3s ease;
+  }
+  .faq-icon::before {
+    width: 100%;
+    height: 2px; /* horizontal bar */
+  }
+  .faq-icon::after {
+    width: 2px; /* vertical bar */
+    height: 100%;
+  }
+
+  /* Hide vertical bar when item is open */
+  .faq-item.open .faq-icon::after {
+    transform: translate(-50%, -50%) scaleY(0);
+  }
+
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
