--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -36,7 +36,7 @@
 
   .garantia-section p{
   line-height: 2;
-}
+  }
 }
 
 .faq-answer p{
@@ -44,7 +44,6 @@
 }
 
 
-/* Create plus icon using before and after */
   .faq-icon::before, .faq-icon::after {
     content: '';
     position: absolute;
@@ -56,14 +55,13 @@
   }
   .faq-icon::before {
     width: 100%;
-    height: 2px; /* horizontal bar */
+    height: 2px; 
   }
   .faq-icon::after {
-    width: 2px; /* vertical bar */
+    width: 2px; 
     height: 100%;
   }
 
-  /* Hide vertical bar when item is open */
   .faq-item.open .faq-icon::after {
     transform: translate(-50%, -50%) scaleY(0);
   }
